# kirby

./: .dockerignore  .git-blame-ignore-revs  .gitignore  Cargo.toml  LICENSE  README.md  clickhouse_schema.md  fetch_sample.rb
.github/workflows/: rust.yml
docker/: cargo_config  dockerfile
download_samples/: gems.locked
previously/00_fastly_to_s3/: README.md  athena_create_table.sql  athena_select_user_agent.sql  json_request_logs.vcl  parse_user_agents.rb
previously/00_fastly_to_s3/sample_data/: user_agent_counts.json  user_agents.csv
previously/01_aws_glue_daily_stats/: json_to_daily_stats.py  json_to_parquet.py
previously/02_download_log_samples/: gems.rb
src/: clickhouse.rs  file.rs  full_name_lengths.rs  lib.rs  main.rs  parsers.rs  platform.rs  request.rs  s3.rs  user_agent.rs  user_agent_parser.rs
test/: client_user_agents.txt  s3_event.json
