cargo-features = ["default-run"]

[package]
name = "kirby"
version = "0.1.0"
edition = "2018"
authors = ["André Arko <andre@arko.net>"]
repository = "https://rubytogether.org/kirby"
default-run = "kirby"

[dependencies]
argparse = "0.2.2"
aws_lambda = { git = "https://github.com/srijs/rust-aws-lambda" }
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
hashbrown = { version = "0.1", features = ['serde', 'nightly'] }
futures = "0.1.24"
lazy_static = "1.1.0"
log = "0.4.5"
nom = "4.0"
rayon = "1.0.2"
regex = "1"
rusoto_core = { version="0.34.0", default_features=false, features=["rustls"] }
rusoto_s3 = { version="0.34.0", default_features=false, features=["rustls"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"

[profile.release]
lto = true
