[package]
name = "kirby"
version = "0.1.0"
edition = "2018"
authors = ["André Arko <andre@arko.net>"]
repository = "https://rubytogether.org/kirby"
default-run = "kirby"

[dependencies]
argparse = "0.2.2"
aws_lambda = { git = "https://github.com/srijs/rust-aws-lambda" }
enum-map = { version = "0.4.1", features = ["serde"] }
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
futures = "0.3"
lazy_static = "1.1.0"
log = "0.4.5"
nom = "4.0"
percent-encoding = "2.1.0" 
rayon = "1.0.2"
regex = "1"
rusoto_core = { version="0.42", default-features=false, features=["rustls"] }
rusoto_s3 = { version="0.42", default-features=false, features=["rustls"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"

[profile.release]
debug = false
lto = true
opt-level = 3
strip = true
