[package]
name = "kirby"
version = "0.1.0"
edition = "2024"
authors = ["André Arko <andre@arko.net>"]
repository = "https://rubytogether.org/kirby"
default-run = "kirby"

[dependencies]
argparse = "0.2.2"
aws_lambda_events = "0.16.0"
enum-map = { version = "0.4.1", features = ["serde"] }
flate2 = { version = "1.0", features = ["zlib"], default-features = false }
lambda_runtime = { version = "0.13.0", features = ["tracing"] }
lazy_static = "1.1.0"
log = "0.4.5"
nom = "4.0"
percent-encoding = "2.1.0"
rayon = "1.0.2"
regex = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "0.1"
tokio = "1.44.1"
aws-config = { version = "1.6.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.79.0", features = ["rt-tokio"] }

[profile.release]
debug = false
lto = true
opt-level = 3
strip = true
